[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "qleet"
authors = [
    {name = "Utkarsh Azad", email = "utkarsh.azad@research.iiit.ac.in"},
    {name = "Animesh Sinha", email = "animesh.sinha@research.iiit.ac.in"},]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/QLemma/qleet/"
