[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "qleet"
authors = [
    {name = "Utkarsh Azad", email = "utkarsh.azad@research.iiit.ac.in"},
    {name = "Animesh Sinha", email = "animesh.sinha@research.iiit.ac.in"},]
maintainers = [
    {name = "QLemma", email = "utkarshazad98@gmail.com"},
]
version = "0.2.0.2"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["NISQ", "Quantum Computing", "Quantum Programming"]
description = "qLEET is an open-source library for exploring Loss landscape, Expressibility, Entangling capability and Training trajectories of noisy parameterized quantum circuits."
dependencies = [
    "cirq==0.11.0",
    "sympy==1.5",
    "tensorflow==2.4.1",
    "tensorflow-quantum==0.5.1",
    "numpy>=1.19",
    "pandas>=1.3",
    "tensorboard==2.5.0",
    "qiskit==0.32.1",
    "dash==1.21.0",
    "networkx>=2.5",
    "pandas>=1.1.0",
    "plotly==5.1.0",
    "scikit-learn==0.24.2",
    "seaborn==0.11.1",
    "tqdm==4.36.1",
    "wandb",
    "pylint==2.4.4",
    "yapf==0.28.0",
    "pyquil==2.28.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Home = "https://github.com/QLemma/qleet/"
